# rpg

./: CMakeLists.txt  README.md  README_pl.md
src/: equipment.hpp  fight.cpp  fight.hpp  game.cpp  game.hpp  main.cpp  player.hpp  shop.cpp  shop.hpp
src/player_classes/: fighter.hpp  magician.hpp  player_classes.hpp
